# file_watcher

./: Cargo.toml  README.md
src/: main.rs
src/command/: cli.rs  data.rs  mod.rs  state.rs
src/provider/: aws_s3.rs  dropbox.rs  google_drive.rs  mod.rs
