[package]
name = "file_watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = [
    "json",
    "multipart",
    "blocking",
    "rustls-tls",
] }
anyhow = "1.0"
walkdir = "2.4"
log = "0.4"
env_logger = "0.10"
aws-sdk-s3 = "1.83.0"
aws-config = "1.6.2"
ratatui = "0.29.0"
crossterm = "0.29.0"
